@@ -7,9 +7,11 @@ Changes since 0.5.0
 
 device files:
  - Added aliases for the first of two USARTs to be able to use the current (hardware) serial libs
- - Added device files for 16 extended midrange PICS (18/19[L]F18/19xx)
+ - Added device files for 16 extended midrange PICS (12/16[L]F18/19xx)
  - Revised memory specifications for _pic_accum and _pic_isr_w for some PICs
  - Added device files for 18f87j50 group of PICs
+ - Added T0CON_T0xx aliases for timer 0 related fields in OPTION_REG of midrange PICs.
+ - Nibble pseudo variables changed to 'inline' functions/procedures.
 
 externals:
  - 23k256 moved "const byte SRAM_23K256_ALWAYS_SET_SPI_MODE = TRUE" from lib to sample files
